# easyths

./: .env.example  .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: deploy-docs.yml  publish.yml
captcha_model/: README.md  __init__.py  config.yaml  config_finetune.yaml  ctc_decoder.py  data_generate4.py  dataset.py  eval.py  eval_ddddocr.py  export_onnx.py  generate_dataset.py  infer.py  infer_onnx.py  infer_read.py  model.py  onnx_infer.py  requirements.txt  ths_data_generate.py  train.py  utils.py
captcha_model/models/: __init__.py  attention_modules.py  loss.py  resnet_ocr.py
config/: trading_config.yaml
docs/: API接口文档.md  index.md  同花顺客户端设置.md  开发指南.md  快速入门.md
docs/development/: contributing.md  index.md
docs/getting-started/: api.md  basic-usage.md  client-sdk.md  configuration.md  docker-deployment.md  faq.md  index.md  installation.md  mcp-service.md  ths-client.md
docs/guide/: api.md  basic-usage.md  faq.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
easyths/: main.py  trade_client.py
easyths/api/: app.py
easyths/api/dependencies/: __init__.py  auth.py  common.py
easyths/api/middleware/: __init__.py
easyths/api/routes/: mcp_server.py  operations.py  queue.py  system.py
easyths/assets/: config_example.toml
easyths/assets/onnx_model/: captcha_ocr.onnx.data
easyths/automation/: base_operation.py  operation_manager.py  tonghuashun_automator.py
easyths/automation/operations/: buy_operation.py  funds_query_operation.py  historical_commission_query_operation.py  holding_query_operation.py  order_cancel_operation.py  order_query_operation.py  sell_operation.py
easyths/core/: __init__.py  base_operation.py  ocr_service.py  operation_manager.py  operation_queue.py  tonghuashun_automator.py
easyths/models/: __init__.py
easyths/operations/: buy.py  condition_buy.py  funds_query.py  funds_query_operation.py  historical_commission_query.py  historical_commission_query_operation.py  holding_query.py  holding_query_operation.py  market_buy.py  market_sell.py  order_cancel.py  order_cancel_operation.py  order_query.py  order_query_operation.py  sell.py  stop_loss_profit.py
easyths/utils/: __init__.py  captcha_ocr.py  config.py  logger.py  screen_capture.py
examples/: order_query_example.py
src/api/: app.py  config.py
src/api/dependencies/: __init__.py  auth.py  common.py
src/api/routes/: operations.py  queue.py  system.py
src/automation/: base_operation.py  operation_manager.py  tonghuashun_automator.py
src/automation/operations/: __init__.py  buy_operation.py  funds_query_operation.py  historical_commission_query_operation.py  holding_query_operation.py  order_cancel_operation.py  order_query_operation.py  sell_operation.py
src/automation/utils/: __init__.py  pop_dialog_handle.py  table_text_handel.py
src/core/: __init__.py  ocr_service.py  operation_queue.py
src/models/: operations.py
src/test/: automation_test.py  op_manager.py
src/utils/: __init__.py  config.py  config_loader.py  env_config.py  logger.py
test/: automation_test.py  client_test.py
